# pypi_oldest_requirements

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: deploy.yml  test.yml  test_and_publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pypi_oldest_requirements/: __init__.py  _version.py  cli.py  misc.py  pypi.py  req_parse.py  req_write.py  requirements.py
tests/: requirements-optional.txt.minimal.pickle  requirements-optional.txt.pickle  requirements-optional.txt_3.6.minimal.pickle  requirements-optional.txt_3.6.pickle  requirements-optional.txt_3.7.pickle  requirements-optional.txt_3.8.minimal.pickle  requirements-optional.txt_3.8.pickle  requirements.txt  requirements.txt.minimal.pickle  requirements.txt.pickle  requirements.txt_3.6.minimal.pickle  requirements.txt_3.6.pickle  requirements.txt_3.7.pickle  requirements.txt_3.8.minimal.pickle  requirements.txt_3.8.pickle  result.pickle  test_pypi_oldest_requirements.py
tests/data/: requirements-ci.txt  requirements-docker-other.txt  requirements-optional.txt  requirements.txt  small-optional.txt  small.txt
tests/test_pypi_oldest_requirements/: Makefile  test_cli_transform_requirement_files0_.txt  test_cli_transform_requirement_files2_.txt  test_cli_transform_requirements__py_3_10_.txt  test_cli_transform_requirements__py_3_12_.txt  test_cli_transform_requirements__py_3_7_.txt  test_cli_transform_requirements__py_3_8_.txt  test_cli_transform_requirements__py_3_9_.txt  test_cli_transform_requirements_ci__py_3_7_.txt  test_cli_transform_requirements_ci__py_3_8_.txt  test_cli_transform_requirements_ci__py_3_9_.txt  test_cli_transform_requirements_ci__requirements_optional__requirements_docker_other__requirements__py_3_10_.txt  test_cli_transform_requirements_ci__requirements_optional__requirements_docker_other__requirements__py_3_12_.txt  test_cli_transform_requirements_ci__requirements_optional__requirements_docker_other__requirements__py_3_7_.txt  test_cli_transform_requirements_ci__requirements_optional__requirements_docker_other__requirements__py_3_8_.txt  test_cli_transform_requirements_ci__requirements_optional__requirements_docker_other__requirements__py_3_9_.txt  test_cli_transform_requirements_docker_other__py_3_7_.txt  test_cli_transform_requirements_docker_other__py_3_9_.txt  test_cli_transform_requirements_optional__py_3_10_.txt  test_cli_transform_requirements_optional__py_3_12_.txt  test_cli_transform_requirements_optional__py_3_8_.txt  test_cli_transform_requirements_optional__py_3_9_.txt  test_cli_transform_small__py_3_12_.txt  test_cli_transform_small__small_optional__py_3_10_.txt  test_cli_transform_small__small_optional__py_3_8_.txt  test_cli_transform_small__small_optional__py_3_9_.txt  (+51 more)
