[build-system]
requires = ['setuptools>=62',  "setuptools-scm[toml]", 'wheel', 'pytest-runner>=2.9', ]
build-backend = "setuptools.build_meta"

[project]
author="René Fritze"
author_email="rene.fritze@wwu.de"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
description='Get "oldest" fitting requirements from pypi'

requirements = [
    "packaging",
    "requirements-parser",
    "requests",
    "requests-toolbelt",
    "typer",
    "click<8",
]

dynamic = ["version", "readme"]

license="BSD license"

keywords="pypi_oldest_requirements"
name="pypi_oldest_requirements"
packages=["pypi_oldest_requirements"]

url="https://github.com/renefritze/pypi_oldest_requirements"


python_requires=">=3.6"

[project.scripts]
pypi_minimal_requirements_pinned="pypi_oldest_requirements.cli:run"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "twine", "watchdog", "flake8", "coverage", "Sphinx", "pytest-pycharm",
    "pytest-regressions", "pre-commit", "black", ]

[tool.setuptools.dynamic]
version = {attr = "pypi_oldest_requirements.__version__"}
readme = {file = ["README.md", ]}
[tool.setuptools_scm]
write_to = "pypi_oldest_requirements/_version.py"
